--- a/base/templates/base/manager.html
+++ b/base/templates/base/manager.html
@@ -65,7 +65,7 @@
       <div class="container tm-container-contact">
         <div class="row">
             <div class="col-12">
-                <h2 class="mb-4 tm-section-title">Created by verified IT Solutions </h2>
+              <h2 class="mb-4 tm-section-title"><a style="color: white;"href="https://verifieditsolutions.com" >created by Verified IT Solutions</a> </h2>
                
             </div>
 
