--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -68,7 +68,7 @@
       <div class="container tm-container-contact">
         <div class="row">
             <div class="col-12">
-                <h2 class="mb-4 tm-section-title"><a style="color: white;"href="{% url 'score-create'%}" >created by Verified IT Solutions</a> </h2>
+                <h2 class="mb-4 tm-section-title"><a style="color: white;"href="https://verifieditsolutions.com" >created by Verified IT Solutions</a> </h2>
                 
                
             </div>
