--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -39,7 +39,7 @@
                   <a class="nav-link tm-nav-link" href=" {% url 'score' %} ">Scoreboard</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href=" {% url 'matches' %} ">Matches</a>
+                  <a class="nav-link tm-nav-link" href=" {% url 'matches_by_week' %} ">Matches</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link tm-nav-link" href="{% url 'reserve' %}">Reserves</a>
